--- a/Bind/Src/Portada.fx.yaml
+++ b/Bind/Src/Portada.fx.yaml
@@ -202,12 +202,24 @@ Portada As screen:
         ZIndex: =16
 
     ButtonCanvas1 As Botón:
+        BasePaletteColor: =
         DisplayMode: =DisplayMode.Edit
+        FontColor: =
         Height: =32
         Width: =96
         X: =98
         Y: =105
         ZIndex: =17
+
+    ButtonCanvas1_1 As Botón:
+        BasePaletteColor: =
+        DisplayMode: =DisplayMode.Edit
+        FontColor: =
+        Height: =32
+        Width: =96
+        X: =550
+        Y: =105
+        ZIndex: =18
 
     Comunicado_1 As group:
         Height: =5
