--- a/Bind/Src/EdicionFcst.fx.yaml
+++ b/Bind/Src/EdicionFcst.fx.yaml
@@ -1071,7 +1071,7 @@ EdicionFcst As screen:
         ZIndex: =31
 
     Cmb_FiltroInputData_1 As combobox:
-        DisplayFields: =["ImputData","IDInputData"]
+        DisplayFields: =["ImputData"]
         InputTextPlaceholder: ="Buscar InputData"
         Items: =GroupBy(Lst_Fcst_Detalle,"ImputData","IPData")
         SearchFields: =["ImputData"]
@@ -2065,7 +2065,7 @@ EdicionFcst As screen:
                     DefaultSelectedItems: |-
                         =Table({NombreCeco:LookUp( Lst_Fcst_MantenedorCeco, Ceco = DataCardValue42_2.Text,NombreCeco)})
                     DisabledColor: =RGBA(26, 26, 26, 1)
-                    DisplayFields: =["NombreCeco"]
+                    DisplayFields: =["Ceco"]
                     DisplayMode: |
                         =DisplayMode.Disabled
                     Height: =Txt_FondoPOJP_11.Height -10
@@ -2076,8 +2076,8 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["NombreCeco"]
-                    SearchItems: =[]
+                    SearchFields: =["Ceco"]
+                    SearchItems: =Search(Lst_Fcst_MantenedorCeco,DataCardValue52_3.SearchText,"Ceco")
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
@@ -2217,7 +2217,7 @@ EdicionFcst As screen:
                     DefaultSelectedItems: |-
                         =Table({NombreCuenta:LookUp( Lst_Fcst_MantenedorCuenta, Cuenta = DataCardValue41_3.Text,NombreCuenta)})
                     DisabledColor: =RGBA(26, 26, 26, 1)
-                    DisplayFields: =["NombreCuenta"]
+                    DisplayFields: =["ComplianceAssetId"]
                     DisplayMode: |
                         =DisplayMode.Disabled
                     Height: =Txt_FondoPOJP_12.Height -10
@@ -2228,8 +2228,8 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["NombreCuenta"]
-                    SearchItems: =[]
+                    SearchFields: =["ComplianceAssetId"]
+                    SearchItems: =Search(Lst_Fcst_MantenedorCuenta,DataCardValue53_2.SearchText,"ComplianceAssetId")
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
@@ -2322,7 +2322,7 @@ EdicionFcst As screen:
                     DefaultSelectedItems: |-
                         =Table({Paquete:LookUp( Lst_Fcst_MantenedorCuenta, Cuenta = DataCardValue41_3.Text,Paquete)})
                     DisabledColor: =RGBA(26, 26, 26, 1)
-                    DisplayFields: =["Paquete"]
+                    DisplayFields: =["ComplianceAssetId"]
                     DisplayMode: |
                         =DisplayMode.Disabled
                     Height: =Txt_FondoPOJP_13.Height -10
@@ -2333,8 +2333,8 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["Paquete"]
-                    SearchItems: =[]
+                    SearchFields: =["ComplianceAssetId"]
+                    SearchItems: =Search(Lst_Fcst_MantenedorCuenta,DataCardValue51_3.SearchText,"ComplianceAssetId")
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
