--- a/Bind/Src/ModuloData.fx.yaml
+++ b/Bind/Src/ModuloData.fx.yaml
@@ -184,7 +184,7 @@ ModuloData As screen:
                     ),
                     Blank()
                 )
-            DisplayFields: =["Nombre_x0020_Producto_x002f_Proy"]
+            DisplayFields: =["AreadeImpacto"]
             Height: =Txt_FondoForm1_71.Height -10
             HoverBorderColor: =RGBA(0, 121, 187, 1)
             Items: |-
@@ -201,7 +201,7 @@ ModuloData As screen:
                     )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
+            SearchFields: =["AreadeImpacto"]
             SearchItems: |-
                 =Search(Sort(
                     Filter(
@@ -213,7 +213,7 @@ ModuloData As screen:
                             !(IDDominio = "Via-7472DB8B-4704-22CA-6C67-FB0803F64EC3")
                         ),
                         'Nombre Producto/Proyecto',SortOrder.Ascending
-                    ),Cmb_ImpactoTech.SearchText,"Nombre_x0020_Producto_x002f_Proy")
+                    ),Cmb_ImpactoTech.SearchText,"AreadeImpacto")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
@@ -367,7 +367,7 @@ ModuloData As screen:
             ChevronFill: =RGBA(0, 121, 187, 1)
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: =Filter(Col_BD_Dominios , IDDominio = ThisItem.IDDominio)
-            DisplayFields: =["Title"]
+            DisplayFields: =["ComplianceAssetId"]
             DisplayMode: =DisplayMode.Disabled//If(ThisItem.DATA_Origen="BIND" && ThisItem.Editando=true;DisplayMode.Edit; DisplayMode.Disabled)
             Height: =39
             HoverBorderColor: =RGBA(0, 121, 187, 1)
@@ -378,8 +378,11 @@ ModuloData As screen:
                 IDDominio="Via-DC044ED3-50C7-899B-1FF8-9A066CF495B5"),Title,SortOrder.Ascending)
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["Title"]
-            SearchItems: =[]
+            SearchFields: =["ComplianceAssetId"]
+            SearchItems: |-
+                =Search(Sort(Filter(Col_BD_Dominios,IDDominio="Via-F5536E52-70B9-88B7-A57E-458F2FD63267"||IDDominio="Via-04AC3A31-5248-667D-97F8-35D2A0D306B3"||
+                IDDominio="Via-961CECE9-3D2F-41E2-0F6C-2D35A99F49C5"||
+                IDDominio="Via-DC044ED3-50C7-899B-1FF8-9A066CF495B5"),Title,SortOrder.Ascending),Dpd_Dominio_1.SearchText,"ComplianceAssetId")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
