--- a/Bind/Src/ServiciosTech.fx.yaml
+++ b/Bind/Src/ServiciosTech.fx.yaml
@@ -785,7 +785,7 @@ ServiciosTech As screen:
             ChevronFill: =RGBA(0, 121, 187, 1)
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: =
-            DisplayFields: =["Nombre_x0020_Producto_x002f_Proy"]
+            DisplayFields: =["AreadeImpacto"]
             DisplayMode: |-
                 =
                     DisplayMode.Edit
@@ -807,14 +807,14 @@ ServiciosTech As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
+            SearchFields: =["AreadeImpacto"]
             SearchItems: |-
                 =Search(Filter(Col_DominiosGestion,
                 (IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCF230A" || 
                 IDDominio="Via-EFF1A142-75C7-8AD8-4CCA-C645097B0BA4" || 
                 IDDominio="Via-FDB30966-A6C1-2FAC-8856-34429C2AA582")
                 &&Estado<>"Inactivo")
-                ,Cmb_FiltroNombre_7.SearchText,"Nombre_x0020_Producto_x002f_Proy")
+                ,Cmb_FiltroNombre_7.SearchText,"AreadeImpacto")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
